sonar exclusions optimized